--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,14 @@
 [platformio]
 default_envs = pro16MHzatmega328
 
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+; change microcontroller
+board_build.mcu = atmega328p
+; change MCU frequency
+board_build.f_cpu = 16000000L
+
 [env:pro16MHzatmega328]
 platform = atmelavr
 board = pro16MHzatmega328
@@ -21,7 +29,8 @@ board = pro8MHzatmega328
 
 [env]
 framework = arduino
-upload_port = /COM9
+;upload_port = /COM6
 monitor_speed = 115200
+
 lib_deps = 
 	mysensors/MySensors@^2.3.2
